# Rich

./: CMakeLists.txt  README.md  cJSON.h  data.json  main.cpp  rich_test_new.py  right.json  test.bat  user.json
game/: game.cpp  game.h
giftroom/: gift.cpp  gift.h
init/: init.cpp  init.h
json/: cJSON.cpp  json.cpp  json.h
magic/: magic.cpp  magic.h
map/: mapdraw.cpp  mapdraw.h
money/: money.cpp  money.h
player/: player.cpp  player.h
terminal/: terminal.cpp  terminal.h
test/: result.json  test.json
test/test0/: expected_output.txt  input.txt  map1.json  map2.json  map4.json  map5.json  map6.json  result.json  user.json
test/test1/: expected_output.json  expected_output.txt  input.txt  user.json
test/test10/: expected_output.json  input.txt
test/test101/: expected_output.json  input.txt  result.json  user.json
test/test11/: expected_output.json  input.txt
test/test12/: expected_output.json  input.txt
test/test13/: input.txt  user.json
test/test14/: expected_output.json  input.txt  user.json
test/test15/: input.txt  user.json
test/test16/: expected_output.json  input.txt
test/test17/: input.txt
test/test18/: input.txt
test/test19/: expected_output.json  input.txt  user.json
test/test2/: expected_output.json  expected_output.txt  input.txt  user.json
test/test20/: expected_output.json  input.txt  user.json
test/test201/: expected_output.json  input.txt  user.json
test/test202/: expected_output.json  result.json  user.json
test/test203/: user.json
test/test204/: expected_output.json  input.txt  (+1 more)
tool/: tool.cpp  tool.h
(+1139 files in other folders)
